adds schema info

--- a/about.html
+++ b/about.html
@@ -54,11 +54,9 @@
         </picture>
         <div class="history" role="region">
             <h2 id="maincontent">History of Dream night</h2>
-            <p>Dream Night is an exquisite aroma oil brand designed for young ladies between theages of 20-30 who love
-                to explore DIY formulas.
+            <p>Dream Night is an exquisite aroma oil brand designed for young ladies between theages of 20-30 who love to explore DIY formulas.
             </p>
-            <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to
-                experience the luxurious scents firsthand.</p>
+            <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to experience the luxurious scents firsthand.</p>
             <picture>
                 <source media="(min-width: 600px)" srcset="images/history-shop.jpg" />
                 <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg" />
@@ -84,17 +82,17 @@
     </main>
     <footer role="contentinfo">
         <div class="wrapper">
-            <div class="footer-info">
+            <div class="footer-info" itemscope itemtype="https://schema.org/LocalBusiness">
                 <div class="contact">
                     <p>Contact us</p>
-                    <p>Tel: +1 (777) 777 7777</p>
+                    <p itemprop="telephone">Tel: +1 (777) 777 7777</p>
                     <p><a href="#">Join Us</a></p>
                     <p><a href="#">Feedback</a></p>
                 </div>
                 <div class="follow">
                     <p>Follow us</p>
-                    <p>Ins: @dream-night-oil</p>
-                    <p>F B: @dream-night-oil</p>
+                    <p>Ins: <a href="">@dream-night-oil</a></p>
+                    <p>F B: <a href="">@dream-night-oil</a></p>
                 </div>
             </div>
             <hr>
