--- a/contact.html
+++ b/contact.html
@@ -77,15 +77,15 @@
                 </div>
             </form>
         </div>
-        <div class="contact-info" role="region">
+        <div class="contact-info" role="region" itemscope itemtype="https://schema.org/LocalBusiness">
             <p>Tel</p>
-            <p>+1 (777) 777 7777</p>
-            <p>Available: Mon to Fri 9:00 - 17:00</p>
+            <p itemprop="telephone">+1 (777) 777 7777</p>
+            <p itemprop="openingHours">Available: Mon to Fri 9:00 - 17:00</p>
         </div>
-        <div class="address-info" role="region">
+        <div class="address-info" role="region" itemscope itemtype="https://schema.org/LocalBusiness">
             <p>Add</p>
-            <p>Wellington St, Ottawa, ON</p>
-            <p>Opening: Mon to Fri 8:00 - 18:00</p>
+            <p itemprop="address">Wellington St, Ottawa, ON</p>
+            <p itemprop="openingHours">Opening: Mon to Fri 8:00 - 18:00</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="statement-info">
@@ -119,17 +119,17 @@
     </main>
     <footer role="contentinfo">
         <div class="wrapper">
-            <div class="footer-info">
+            <div class="footer-info" itemscope itemtype="https://schema.org/LocalBusiness">
                 <div class="contact">
                     <p>Contact us</p>
-                    <p>Tel: +1 (777) 777 7777</p>
+                    <p itemprop="telephone">Tel: +1 (777) 777 7777</p>
                     <p><a href="#">Join Us</a></p>
                     <p><a href="#">Feedback</a></p>
                 </div>
                 <div class="follow">
                     <p>Follow us</p>
-                    <p>Ins: @dream-night-oil</p>
-                    <p>F B: @dream-night-oil</p>
+                    <p>Ins: <a href="">@dream-night-oil</a></p>
+                    <p>F B: <a href="">@dream-night-oil</a></p>
                 </div>
             </div>
             <hr>
