--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
                 <img src="images/home-banner.jpg" alt="image of aroma oil diffuser">
             </picture>
             <h2 id="maincontent">Welcome to Dream Night</h2>
-            <p>
-                The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a
-                peaceful statete of mind.
-            </p>
+            <p>The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.</p>
             <div class="welcome-button" role="region">
                 <form action="about.html">
                     <button type="submit" onclick="about.html">Story about us</a></button>
@@ -76,8 +73,7 @@
         <div class="service" role="region">
             <h2>Dream a better life</h2>
             <div class="statement">
-                <p>We pride ourselves on using only the highest quality ingredients to create our products, ensure that
-                    you can experience the full benefits of natural aromatherapy.</p>
+                <p>We pride ourselves on using only the highest quality ingredients to create our products, ensure thatyou can experience the full benefits of natural aromatherapy.</p>
             </div>
             <div class="equipment">
                 <picture>
@@ -104,14 +100,11 @@
                 <p><a href="#">Original oil & Formula</a></p>
             </div>
         </div>
-        <div class="announcement" role="region">
+        <div class="announcement" role="region" itemscope itemtype="https://schema.org/LocalBusiness">
             <h2>We are Ready to go</h2>
-            <p>
-                Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the
-                opening of our first off-line store in Ottawa.
-            </p>
-            <p>Address: <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
-            <p>Opening: Mon - Fri 08:00 - 18:00</p>
+            <p>Get ready to experience the ultimate in relaxation and self-care! Dream Night is proud to announce the opening of our first off-line store in Ottawa.</p>
+            <p itemprop="address">Address: <a href="#">Wellington St, Ottawa, ON K1A 0A9</a></p>
+            <p itemprop="openingHours">Opening: Mon - Fri 08:00 - 18:00</p>
             <!-- insert google map info -->
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2800.4914178672984!2d-75.71181921012548!3d45.41959436183835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce045a7a4831e5%3A0xcb7f2bab75407e44!2sWellington%20St!5e0!3m2!1sen!2sca!4v1688007870948!5m2!1sen!2sca"
@@ -119,9 +112,7 @@
         </div>
         <div class="activity" role="region">
             <h2>Buy more save more</h2>
-            <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership
-                program! For every <i>$10</i> spent, you'll earn <i>1</i> point. Once you'll earn <i>10</i> points,
-                you'll get <i>5%</i> off your next purchase.</p>
+            <p>Earn extra points with every purchase that can use towards future discounts. Save big with our membership program! For every <i>$10</i> spent, you'll earn <i>1</i> point. Once you'll earn <i>10</i> points, you'll get <i>5%</i> off your next purchase.</p>
             <h3>Not a member yet?</h3>
             <div class="discount-info">
                 <p>Get <i>10%</i> off</p>
@@ -162,17 +153,17 @@
     </main>
     <footer role="contentinfo">
         <div class="wrapper">
-            <div class="footer-info">
+            <div class="footer-info" itemscope itemtype="https://schema.org/LocalBusiness">
                 <div class="contact">
                     <p>Contact us</p>
-                    <p>Tel: +1 (777) 777 7777</p>
+                    <p itemprop="telephone">Tel: +1 (777) 777 7777</p>
                     <p><a href="#">Join Us</a></p>
                     <p><a href="#">Feedback</a></p>
                 </div>
                 <div class="follow">
                     <p>Follow us</p>
-                    <p>Ins: @dream-night-oil</p>
-                    <p>F B: @dream-night-oil</p>
+                    <p>Ins: <a href="">@dream-night-oil</a></p>
+                    <p>F B: <a href="">@dream-night-oil</a></p>
                 </div>
             </div>
             <hr>
