--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;1,300;1,400&family=Sawarabi+Gothic&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Dream Night</title>
 </head>
 <body>
@@ -65,7 +64,7 @@
             <p>The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.</p>
             <div class="welcome-button" role="region">
                 <form action="about.html">
-                    <button type="submit" onclick="about.html">Story about us</a></button>
+                    <button type="submit" onclick="about.html">Story about us</button>
                 </form>
             </div>
         </div>
