fixes picture naming error

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <main class="wrapper" role="main">
         <picture class="about-banner">
             <source media="(min-width: 600px)" srcset="images/about-banner.jpg" />
-            <source media="(max-width: 599px)" srcset="images/about-banner-boo_x_400.jg" />
+            <source media="(max-width: 599px)" srcset="images/about-banner-600_x_400.jpg" />
             <img src="images/about-banner.jpg" alt="image of us">
         </picture>
         <div class="history" role="region">
