--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
             <h2>We Hope</h2>
             <p>To create a world where women can easily and naturally incorporate self care prctices into their busy lives, leading to increased happiness, productivity, and overall well-beng.</p>
             <div class="vision-button">
-                <button type="button">Shop now</button>
+                <button class="nor-button" type="button">Shop now</button>
             </div>
         </div>
     </main>
