--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
                 </div>
                 <div class="submit-button">
-                    <button type="submit">Send</button>
+                    <button class="nor-button" type="submit">Send</button>
                 </div>
             </form>
         </div>
