--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p>The home of luxurious and all-nature aroma oils designed to soothe your senses and transport you to a peaceful statete of mind.</p>
             <div class="welcome-button" role="region">
                 <form action="about.html">
-                    <button type="submit" onclick="about.html">Story about us</button>
+                    <button class="nor-button" type="submit" onclick="about.html">Story about us</button>
                 </form>
             </div>
         </div>
@@ -129,7 +129,7 @@
                     <img src="images/commodity1.jpg" alt="image of aroma product">
                 </picture>
                 <div class="product-button">
-                    <button type="button">Buy now</button>
+                    <button class="nor-button" type="button">Buy now</button>
                 </div>
             </div>
             <div class="item">
@@ -139,7 +139,7 @@
                     <img src="images/commodity2.jpg" alt="image of aroma product">
                 </picture>
                 <div class="product-button">
-                    <button type="button">Buy now</button>
+                    <button class="nor-button" type="button">Buy now</button>
                 </div>
             </div>
             <!-- Using icons from fontawesome -->
