adds some more comments

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
     </header>
     <main class="wrapper" role="main">
         <div class="contact-form">
+            <!-- when screen size is under 600px, use the smaller image -->
             <picture>
                 <source media="(min-width: 600px)" srcset="images/contact-banner.jpg" />
                 <source media="(min-width: 599px)" srcset="images/contact-banner-600_x_377.jpg" />
