--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <p>We pride ourselves on using only the highest quality ingredients to create our products, ensure thatyou can experience the full benefits of natural aromatherapy.</p>
             </div>
             <div class="equipment">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/equipments.jpg" />
                     <source media="(max-width: 599px)" srcset="images/equipments-600_x_799.jpg" />
@@ -83,6 +84,7 @@
                 <p><a href="#">Equipment</a></p>
             </div>
             <div class="oil">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/packaged-oil.jpg" />
                     <source media="(max-width: 599px)" srcset="images/packaged-oil-600_x_900.jpg" />
@@ -91,6 +93,7 @@
                 <p><a href="#">Packaged Oil</a></p>
             </div>
             <div class="formula">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/oil-formula.jpg" />
                     <source media="(max-width: 599px)" srcset="images/oil-formula-600_x_900.jpg" />
@@ -123,6 +126,7 @@
         </div>
         <div class="product" role="region">
             <div class="item">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/commodity1.jpg" />
                     <source media="(max-width: 599px)" srcset="images/commodity1-600_x_900.jpg" />
@@ -133,6 +137,7 @@
                 </div>
             </div>
             <div class="item">
+                <!-- when screen size is under 600px, use the smaller image -->
                 <picture>
                     <source media="(min-width: 600px)" srcset="images/commodity2.jpg" />
                     <source media="(max-width: 599px)" srcset="images/commodity2-600_x_900.jpg" />
