--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
         </div>
     </header>
     <main class="wrapper" role="main">
+        <!-- when screen size is under 600px, use the smaller image -->
         <picture class="about-banner">
             <source media="(min-width: 600px)" srcset="images/about-banner.jpg" />
             <source media="(max-width: 599px)" srcset="images/about-banner-600_x_400.jpg" />
@@ -56,6 +57,7 @@
             <p>Dream Night is an exquisite aroma oil brand designed for young ladies between theages of 20-30 who love to explore DIY formulas.
             </p>
             <p>The brand's first offline store opened its doors in Ottawa earlier this year, inviting customers to experience the luxurious scents firsthand.</p>
+            <!-- when screen size is under 600px, use the smaller image -->
             <picture>
                 <source media="(min-width: 600px)" srcset="images/history-shop.jpg" />
                 <source media="(max-width: 599px)" srcset="images/history-shop-600_x_400.jpg" />
@@ -65,6 +67,7 @@
         <div class="mission" role="region">
             <h2>Our Mission</h2>
             <p>"Help people feel relaxed and achieve a deep, restful sleep."</p>
+            <!-- when screen size is under 600px, use the smaller image -->
             <picture>
                 <source media="(min-width: 600px)" srcset="images/mission.jpg" />
                 <source media="(min-width: 599px)" srcset="images/mission-600_x_400.jg" />
